# plumj.am

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  STATE.md  colours.txt  flake.nix  input.css  mprocs.yaml  nerd-input.css  normal-input.css  prepare_release.nu  publish_blog.nu  release.nu  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  post-release.yaml  release.yml
assets/: gen-tailwind.css  nerd-input.css  normal-input.css
common/: .gitignore  Cargo.toml  build.rs  clipboard.rs  data.rs  lib.rs
nerd/: .gitignore  Cargo.toml  home.rs  input.css  keyboard.rs  layouts.rs  lines.rs  main.rs  project.rs  scroll.rs
nerd_dist/: index.html
nerd_dist/assets/: gen-tailwind-e4f3dbd9f5b40889.css  nerd-c9145b45c289565a.js
normal/: .gitignore  Cargo.toml  Dioxus.toml  blog.rs  contact.rs  home.rs  input.css  layout.rs  main.rs  projects.rs  theme.rs
normal/posts/: is-this-thing-on.md  maybe-nix-does-fix-everything.md  template.md  vim-helix-zed-helix-again.md
normal_dist/: index.html
normal_dist/assets/: gen-tailwind-4bce081431bfdb18.css  normal-ec44cad34eda2d72.js
posts/: is-this-thing-on.md
scripts/: publish_blog.nu  release.nu
src/: data.rs  keyboard.rs  layout.rs  main.rs  me.rs  project.rs  projects.rs  scroll.rs  utils.rs
src/nerd/: home.rs  keyboard.rs  layout.rs  mod.rs  project.rs  scroll.rs  utils.rs
src/normal/: home.rs  layout.rs  mod.rs
