[package]
authors = [ "PlumJam <git@plumj.am>" ]
edition = "2024"
name    = "plumjam-website"
version = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus  = { features = [ "router" ], version = "0.6.0" }
web-sys = { features = [ "Window" ], version = "0.3.77" }

[features]
default = [ "web" ]
desktop = [ "dioxus/desktop" ]
mobile  = [ "dioxus/mobile" ]
web     = [ "dioxus/web" ]

[lints.clippy]
unwrap_used = "warn"

[profile]

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
