[workspace]
members  = [ "common", "nerd", "normal" ]
resolver = "3"

[workspace.metadata.crane]
name = "PlumJam"

[workspace.package]
authors    = [ "PlumJam <git@plumj.am" ]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/plumj-am/plumj.am"
version    = "0.14.6"

[workspace.lints.clippy]
allow_attributes_without_reason   = "allow"
arbitrary_source_item_ordering    = "allow"
blanket_clippy_restriction_lints  = "allow"
empty_enum_variants_with_brackets = "allow"
exhaustive_enums                  = "allow"
exhaustive_structs                = "allow"
expect_used                       = "allow"
float_arithmetic                  = "allow"
impl_trait_in_params              = "allow"
implicit_return                   = "allow"
let_underscore_untyped            = "allow"
min_ident_chars                   = "allow"
missing_docs_in_private_items     = "allow"
missing_inline_in_public_items    = "allow"
mod_module_files                  = "allow"
non_ascii_literal                 = "allow"
print_stderr                      = "allow"
print_stdout                      = "allow"
pub_use                           = "allow"
question_mark_used                = "allow"
same_name_method                  = "allow"
separated_literal_suffix          = "allow"
shadow_reuse                      = "allow"
single_call_fn                    = "allow"
string_slice                      = "allow"
todo                              = "allow"
unwrap_used                       = "deny"
use_debug                         = "allow"

[workspace.lints.clippy.pedantic]
level    = "warn"
priority = -1

[workspace.lints.clippy.restriction]
level    = "warn"
priority = -1

[workspace.dependencies.common]
path = "common"

[workspace.dependencies.dioxus]
features = [ "router" ]
version  = "0.6.0"

[workspace.dependencies.web-sys]
features = [ "Window" ]
version  = "0.3.77"

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
