[workspace]
members  = [ "common", "nerd", "normal" ]
resolver = "3"

metadata.crane.name = "PlumJam"

[workspace.package]
authors    = [ "PlumJam <git@plumj.am" ]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/plumj-am/plumj.am"
version    = "0.16.5"

[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

allow_attributes_without_reason   = "allow"
arbitrary_source_item_ordering    = "allow"
blanket_clippy_restriction_lints  = "allow"
empty_enum_variants_with_brackets = "allow"
exhaustive_enums                  = "allow"
exhaustive_structs                = "allow"
expect_used                       = "allow"
float_arithmetic                  = "allow"
impl_trait_in_params              = "allow"
implicit_return                   = "allow"
let_underscore_must_use           = "allow"
let_underscore_untyped            = "allow"
min_ident_chars                   = "allow"
missing_docs_in_private_items     = "allow"
missing_inline_in_public_items    = "allow"
mod_module_files                  = "allow"
non_ascii_literal                 = "allow"
print_stderr                      = "allow"
print_stdout                      = "allow"
pub_use                           = "allow"
question_mark_used                = "allow"
same_name_method                  = "allow"
separated_literal_suffix          = "allow"
shadow_reuse                      = "allow"
shadow_unrelated                  = "allow"
single_call_fn                    = "allow"
string_slice                      = "allow"
todo                              = "allow"
unwrap_used                       = "deny"
use_debug                         = "allow"

[workspace.dependencies]
common.path    = "common"
dioxus         = { features = [ "router" ], version = "0.6.0" }
pulldown-cmark = { default-features = false, features = [ "html" ], version = "0.13.0" }
serde_yaml_bw  = "2.4.0"
web-sys        = { features = [ "Window", "Document", "HtmlElement", "Storage" ], version = "0.3.77" }

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1
