[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "common"
repository.workspace = true
version.workspace    = true

[lib]
name = "common"
path = "lib.rs"

[lints]
workspace = true

[build-dependencies]
toml = "0.8"

[dependencies]
dioxus.workspace = true
