[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "nerd"
repository.workspace = true
version.workspace    = true

[[bin]]
name = "nerd"
path = "main.rs"

[lints]
workspace = true

[dependencies]
common.workspace  = true
dioxus.workspace  = true
web-sys.workspace = true

[features]
default = [ "web" ]
desktop = [ "dioxus/desktop" ]
mobile  = [ "dioxus/mobile" ]
web     = [ "dioxus/web" ]
