[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "normal"
repository.workspace = true
version.workspace    = true

[[bin]]
name = "normal"
path = "main.rs"

[lints]
workspace = true

[dependencies]
common.workspace = true
dioxus.workspace = true

serde_yaml = "0.9"

[features]
default = [ "web" ]
desktop = [ "dioxus/desktop" ]
mobile  = [ "dioxus/mobile" ]
web     = [ "dioxus/web" ]
