[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "normal"
repository.workspace = true
version.workspace    = true

[[bin]]
name = "normal"
path = "main.rs"

[lints]
workspace = true

[dependencies]
common.workspace = true
dioxus.workspace = true

pulldown-cmark = { default-features = false, features = [ "html" ], version = "0.13.0" }
serde_yaml_bw  = "2.4.0"

[features]
default = [ "web" ]
desktop = [ "dioxus/desktop" ]
mobile  = [ "dioxus/mobile" ]
web     = [ "dioxus/web" ]
